LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Voice_User__c/fields/zoom_app__AccessToken__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__AccessToken__c</fullName>
    <label>AccessToken</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>