LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Voice_User__c/fields/zoom_app__Allow_user_operate_auto_record__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Allow_user_operate_auto_record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow user operate auto record</label>
    <type>Checkbox</type>
</CustomField>