LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Voice_User__c/fields/zoom_app__Check_Plan_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Check_Plan_TimeStamp__c</fullName>
    <label>Check Plan TimeStamp</label>
    <type>Date</type>
</CustomField>