LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Voice_User__c/fields/zoom_app__Has_Zoom_Voice_Call_Record_Permission__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Has_Zoom_Voice_Call_Record_Permission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Zoom Voice Call Record Permission</label>
    <type>Checkbox</type>
</CustomField>