LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Voice_User__c/fields/zoom_app__Login_Status__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Login_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Login Status</label>
    <type>Checkbox</type>
</CustomField>