LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Voice_User__c/fields/zoom_app__RefreshToken__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__RefreshToken__c</fullName>
    <label>RefreshToken</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>